syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.osmarjunior";
option java_outer_classname = "KeyManagerGrpc";
option objc_class_prefix = "HLW";

package br.com.zup.osmarjunior;

service KeyManagerGrpcService {
  rpc cadastraChavePix (ChavePixRequest) returns (ChavePixResponse) {}
}

enum TipoDeChave {
  CHAVE_ALEATORIA = 0;
  CPF = 1;
  EMAIL = 2;
  TELEFONE_CELULAR = 3;
}

enum TipoDeConta {
  CONTA_CORRENTE = 0;
  CONTA_POUPANCA = 1;
}

message ChavePixRequest {
  string identificadorCliente = 1;
  TipoDeChave tipoDeChave = 2;
  string chave = 3;
  TipoDeConta tipoDeConta = 4;
}

message ChavePixResponse {
  int64 pixId = 1;
}